--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,22 +2,17 @@
   <div class="container">
     <div class="navbar-header">
       <a href="../" class="navbar-brand">Github Search</a>
-      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-      </ul>
+      <!--<ul class="nav navbar-nav">-->
+        <!--<li><a href="#">Link</a></li>-->
+        <!--<li><a href="#">Link</a></li>-->
+      <!--</ul>-->
 
-      <ul class="nav navbar-nav navbar-right">
-       <li><a href="#">Help</a></li>
-       <li><a href="#">Contact Us</a></li>
-      </ul>
+      <!--<ul class="nav navbar-nav navbar-right">-->
+       <!--<li><a href="#">Help</a></li>-->
+       <!--<li><a href="#">Contact Us</a></li>-->
+      <!--</ul>-->
 
     </div>
   </div>
