--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a href="../" class="navbar-brand">Github Search</a>
+      <a href="#" class="navbar-brand">Github Search</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
       <!--<ul class="nav navbar-nav">-->
